# siesta-rest-editor

./: .gitignore  pyproject.toml  reSTEdit.py  requirements-dev.txt
src/siesta/: CodingWidgets.py  reSTNotes.py
